# eren-takim-reposu

./: .gitignore  fastrtps_no_shm.xml  how --stat  mav.parm  mav_2_1.parm  mav_3_1.parm  monitor.py
drone_control/: package.xml  setup.py
drone_control/drone_control/: hover_node.py  takeoff_node.py
install/: local_setup.sh  setup.sh
install/my_swarm_pkg/lib/my_swarm_pkg/: collision_avoidance  color_zone_detector  drone_interface  formation_controller  intent_coordinator  local_fsm  mission_fsm  precision_landing  qr_perception  safety_monitor  waypoint_navigator
install/my_swarm_pkg/share/my_swarm_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_swarm_pkg/share/my_swarm_pkg/config/: cyclonedds_localhost.xml  qr_map.yaml
install/my_swarm_pkg/share/my_swarm_pkg/launch/: swarm_competition.launch.py
install/swarm_msgs/include/swarm_msgs/swarm_msgs/msg/: color_zone.h  color_zone.hpp  color_zone_list.hpp  join_request.h  join_request.hpp  local_state.hpp  qr_result.h  qr_result.hpp  swarm_intent.hpp  teleop_cmd.h  teleop_cmd.hpp
install/swarm_msgs/include/swarm_msgs/swarm_msgs/msg/detail/: color_zone__builder.hpp  color_zone__functions.c  color_zone__functions.h  color_zone__rosidl_typesupport_fastrtps_c.h  color_zone__rosidl_typesupport_fastrtps_cpp.hpp  color_zone__struct.hpp  color_zone__type_support.c  color_zone__type_support.cpp  color_zone__type_support.h  color_zone__type_support.hpp  color_zone_list__functions.h  color_zone_list__rosidl_typesupport_fastrtps_c.h  color_zone_list__rosidl_typesupport_fastrtps_cpp.hpp  color_zone_list__rosidl_typesupport_introspection_cpp.hpp  color_zone_list__struct.hpp  color_zone_list__type_support.cpp  color_zone_list__type_support.h  color_zone_list__type_support.hpp  formation_cmd__builder.hpp  formation_cmd__rosidl_typesupport_fastrtps_c.h  formation_cmd__rosidl_typesupport_fastrtps_cpp.hpp  formation_cmd__rosidl_typesupport_introspection_c.h  formation_cmd__rosidl_typesupport_introspection_cpp.hpp  formation_cmd__traits.hpp  formation_cmd__type_support.c  formation_cmd__type_support.h  formation_cmd__type_support.hpp  join_request__functions.h  join_request__rosidl_typesupport_fastrtps_c.h  join_request__rosidl_typesupport_fastrtps_cpp.hpp  join_request__struct.h  join_request__traits.hpp  join_request__type_support.c  join_request__type_support.cpp  join_request__type_support.h  join_request__type_support.hpp  local_state__functions.c  local_state__functions.h  qr_result__builder.hpp  qr_result__functions.c  (+39 more)
install/swarm_msgs/include/swarm_msgs/swarm_msgs/srv/: set_qr_map.hpp
install/swarm_msgs/include/swarm_msgs/swarm_msgs/srv/detail/: set_qr_map__functions.c  set_qr_map__rosidl_typesupport_fastrtps_c.h  set_qr_map__rosidl_typesupport_fastrtps_cpp.hpp  set_qr_map__struct.h  set_qr_map__traits.hpp  set_qr_map__type_support.c  set_qr_map__type_support.cpp  (+2 more)
install/swarm_msgs/share/ament_index/resource_index/package_run_dependencies/: swarm_msgs
install/swarm_msgs/share/swarm_msgs/: local_setup.sh  package.sh
install/swarm_msgs/share/swarm_msgs/cmake/: export_swarm_msgs__rosidl_generator_pyExport.cmake  export_swarm_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  swarm_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/swarm_msgs/share/swarm_msgs/msg/: ColorZone.idl  JoinRequest.idl  SafetyEvent.idl  SwarmIntent.idl  TaskTrigger.idl  TeleopCmd.idl
install/swarm_msgs/share/swarm_msgs/srv/: SetQRMap.idl
log/: latest_build
my_swarm_pkg/: KULLANIM_REHBERI.md  OTR_RAPORU.md  README.md  local_fsm.py  package.xml  qr_perception.py  setup.cfg  waypoint_navigator.py
my_swarm_pkg/config/: activate_streams.py  cyclonedds_localhost.xml  mavros_config.yaml  qr_map.yaml
my_swarm_pkg/launch/: swarm_competition.launch.py
my_swarm_pkg/models/color_zone_blue/: model.config  model.sdf
my_swarm_pkg/models/color_zone_green/: model.config  model.sdf
my_swarm_pkg/models/color_zone_red/: model.config  model.sdf
my_swarm_pkg/models/qr_marker_1/: model.config  model.sdf
my_swarm_pkg/models/qr_marker_2/: model.config  model.sdf
my_swarm_pkg/models/qr_marker_3/: model.config  model.sdf
my_swarm_pkg/models/qr_marker_4/: model.config  model.sdf
my_swarm_pkg/models/qr_marker_5/: model.config  model.sdf
my_swarm_pkg/models/qr_marker_6/: model.config  model.sdf
my_swarm_pkg/my_swarm_pkg/: collision_avoidance.py  color_zone_detector.py  drone_interface.py  formation_controller.py  intent_coordinator.py  local_fsm.py  mission_fsm.py  precision_landing.py  qr_perception.py  safety_monitor.py  setup.py  simple_3drone_test.py  waypoint_navigator.py
my_swarm_pkg/scripts/: generate_qr_codes.py  test_collision_avoidance.py  test_formations_direct.py  test_formations_mock.py  test_qr_perception.py
my_swarm_pkg/worlds/: world_task1_qr_static.sdf
swarm_msgs/: CMakeLists.txt
test_scripts/: README_TESTLER.md  test_battery.py  test_dds_loss.py  test_gcs_loss.py  test_gps_deny.py  test_motor_fail.py  test_rc_fail.py  uwb_mock.py
(+14 files in other folders)
