<?xml version="1.0"?>
<package format="3">
  <name>my_swarm_pkg</name>
  <version>0.0.1</version>
  <description>TEKNOFEST 2026 Swarm Package</description>
  <maintainer email="seyda@todo.com">seyda</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavros</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
