[develop]
script_dir=$base/lib/my_swarm_pkg

[install]
install_scripts=$base/lib/my_swarm_pkg

[metadata]
name = my_swarm_pkg
version = 0.0.1

[options]
packages = my_swarm_pkg

[options.data_files]
share/ament_index/resource_index/packages =
    resource/my_swarm_pkg
share/my_swarm_pkg =
    package.xml
share/my_swarm_pkg/launch =
    launch/swarm_competition.launch.py
share/my_swarm_pkg/config =
    config/cyclonedds_localhost.xml
    config/qr_map.yaml

[options.entry_points]
console_scripts =
    drone_interface = my_swarm_pkg.drone_interface:main
    local_fsm = my_swarm_pkg.local_fsm:main
    intent_coordinator = my_swarm_pkg.intent_coordinator:main
    formation_controller = my_swarm_pkg.formation_controller:main
    collision_avoidance = my_swarm_pkg.collision_avoidance:main
    safety_monitor = my_swarm_pkg.safety_monitor:main
    qr_perception = my_swarm_pkg.qr_perception:main
    waypoint_navigator = my_swarm_pkg.waypoint_navigator:main
    mission_fsm = my_swarm_pkg.mission_fsm:main
    precision_landing = my_swarm_pkg.precision_landing:main
    color_zone_detector = my_swarm_pkg.color_zone_detector:main
