[install]
install_scripts=$base/lib/my_swarm_pkg

[metadata]
name = my_swarm_pkg
version = 0.0.1

[options]
packages = my_swarm_pkg

[options.data_files]
share/ament_index/resource_index/packages =
    resource/my_swarm_pkg
share/my_swarm_pkg =
    package.xml
share/my_swarm_pkg/launch =
    launch/swarm_competition.launch.py
share/my_swarm_pkg/config =
    config/cyclonedds_localhost.xml
    config/qr_map.yaml
    config/fastdds_no_shm.xml
    config/sitl_sr0.parm
    config/activate_streams.py
share/my_swarm_pkg/worlds =
    worlds/world_base.sdf
    worlds/world_formation.sdf
    worlds/world_takeoff_sync.sdf
    worlds/world_task1_qr_static.sdf
    worlds/world_task1_random.sdf
    worlds/world_task2_joystick.sdf
    worlds/world_wind_noise.sdf
share/my_swarm_pkg/models/qr_marker_1 =
    models/qr_marker_1/model.sdf
    models/qr_marker_1/model.config
share/my_swarm_pkg/models/qr_marker_1/materials/textures =
    models/qr_marker_1/materials/textures/qr_marker_1.png
share/my_swarm_pkg/models/qr_marker_2 =
    models/qr_marker_2/model.sdf
    models/qr_marker_2/model.config
share/my_swarm_pkg/models/qr_marker_2/materials/textures =
    models/qr_marker_2/materials/textures/qr_marker_2.png
share/my_swarm_pkg/models/qr_marker_3 =
    models/qr_marker_3/model.sdf
    models/qr_marker_3/model.config
share/my_swarm_pkg/models/qr_marker_3/materials/textures =
    models/qr_marker_3/materials/textures/qr_marker_3.png
share/my_swarm_pkg/models/qr_marker_4 =
    models/qr_marker_4/model.sdf
    models/qr_marker_4/model.config
share/my_swarm_pkg/models/qr_marker_4/materials/textures =
    models/qr_marker_4/materials/textures/qr_marker_4.png
share/my_swarm_pkg/models/qr_marker_5 =
    models/qr_marker_5/model.sdf
    models/qr_marker_5/model.config
share/my_swarm_pkg/models/qr_marker_5/materials/textures =
    models/qr_marker_5/materials/textures/qr_marker_5.png
share/my_swarm_pkg/models/qr_marker_6 =
    models/qr_marker_6/model.sdf
    models/qr_marker_6/model.config
share/my_swarm_pkg/models/qr_marker_6/materials/textures =
    models/qr_marker_6/materials/textures/qr_marker_6.png
share/my_swarm_pkg/models/color_zone_red =
    models/color_zone_red/model.sdf
    models/color_zone_red/model.config
share/my_swarm_pkg/models/color_zone_green =
    models/color_zone_green/model.sdf
    models/color_zone_green/model.config
share/my_swarm_pkg/models/color_zone_blue =
    models/color_zone_blue/model.sdf
    models/color_zone_blue/model.config

[options.entry_points]
console_scripts =
    drone_interface = my_swarm_pkg.drone_interface:main
    local_fsm = my_swarm_pkg.local_fsm:main
    intent_coordinator = my_swarm_pkg.intent_coordinator:main
    formation_controller = my_swarm_pkg.formation_controller:main
    collision_avoidance = my_swarm_pkg.collision_avoidance:main
    safety_monitor = my_swarm_pkg.safety_monitor:main
    qr_perception = my_swarm_pkg.qr_perception:main
    waypoint_navigator = my_swarm_pkg.waypoint_navigator:main
    mission_fsm = my_swarm_pkg.mission_fsm:main
    precision_landing = my_swarm_pkg.precision_landing:main
    color_zone_detector = my_swarm_pkg.color_zone_detector:main
